feat: conclusão da US023-Anotação-nas-cartas, foi criado dois endpoints um para criar a anotação e outro para listar
